Make it configurable

--- a/popup.html
+++ b/popup.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
-      
-  </head>
+  <head/>
     <body>
-    <div id="links" />
-    <script src="popup.js"></script>
+      <script src="popup.js"></script>
   </body>
 </html>
