--- a/options.html
+++ b/options.html
@@ -14,7 +14,7 @@
             <span>Link ends with:</span>
             <span><input type="input" id="txtEndWith" placeholder="Comma separatred values"/></span>
         </div>
-        <button id="btnSave">Save</button>
+        <button id="btnRestore">Restore to Default</button> <button id="btnSave">Save</button>
     </div>
     
   </body>
