--- a/options.html
+++ b/options.html
@@ -14,6 +14,11 @@
             <span>Link ends with:</span>
             <span><input type="input" id="txtEndWith" placeholder="Comma separatred values"/></span>
         </div>
+        <div id="custom">
+          <span>Custom:</span>
+          <span><input type="input" id="txtCustomAttribute" placeholder="Attribute"/><input type="input" id="txtCustomValue" placeholder="Value"/></span>
+        </div>
+
         <button id="btnRestore">Restore to Default</button> <button id="btnSave">Save</button>
     </div>
     
